# HabboOriginsBot

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust-nightly-pull_request.yml  rust-nightly-push.yml  rust.yml
src/: helper.rs  macros.rs  main.rs  mongo.rs  structs.rs
src/commands/: check.rs  info.rs  init.rs  mod.rs  reset.rs  verify.rs
