[package]
name = "originsbot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["rt-multi-thread", "io-util", "sync", "time"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
log = "0.4.22"
log4rs = "1.3.0"
serenity = "0.12.2"
reqwest = { version = "0.12.7", features = ["blocking"] }
mongodb = "3.1.0"
bson = "2.13.0"
rand = "0.8.5"

[profile.release]
strip = true        # Automatically strip symbols from the binary
opt-level = 3       # Optimize for size
lto = true          # Enable link time optimization
codegen-units = 1   # Maximize size reduction optimizations
